[gd_scene load_steps=8 format=3 uid="uid://b33g1ypyny6i5"]

[ext_resource type="Theme" uid="uid://dw7ft4xik3rji" path="res://Assets/Theme/Normal.tres" id="1_601td"]
[ext_resource type="Script" path="res://Script/UI/CharacterPanel.gd" id="1_cbk0p"]
[ext_resource type="PackedScene" uid="uid://b13y6wkodkbq1" path="res://Scene/UI/PropertyInfoItem.tscn" id="1_q04fi"]
[ext_resource type="PackedScene" uid="uid://bwegnxa4rtgh2" path="res://Scene/UI/TitleBar.tscn" id="3_j28y6"]
[ext_resource type="Texture2D" uid="uid://dxcf3eyxqgv36" path="res://Assets/UI/Texture/RedFlag.png" id="8_unxuv"]
[ext_resource type="LabelSettings" uid="uid://0o7o1i1t58pl" path="res://Assets/LabelSetting/UITitleBigGold.tres" id="9_i3c5s"]
[ext_resource type="LabelSettings" uid="uid://sosklb2t4w3c" path="res://Assets/LabelSetting/UITitleBigerGold.tres" id="10_abgka"]

[node name="CharacterPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_601td")
script = ExtResource("1_cbk0p")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"SharpPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" parent="Panel/VBoxContainer" instance=ExtResource("3_j28y6")]
layout_mode = 2
title_text = "人物信息"

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="NinePatchRect" type="NinePatchRect" parent="Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
texture = ExtResource("8_unxuv")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/NinePatchRect/VBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/NinePatchRect/VBoxContainer/TextureRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -20

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/NinePatchRect/VBoxContainer/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level"
label_settings = ExtResource("9_i3c5s")
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/NinePatchRect/VBoxContainer/TextureRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "21"
label_settings = ExtResource("10_abgka")
horizontal_alignment = 1

[node name="PlayerNameLabel" type="Label" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/NinePatchRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "花神"
label_settings = ExtResource("9_i3c5s")
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Propertys" type="GridContainer" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 100
columns = 2

[node name="力量" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "strength"

[node name="智慧" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "wisdom"

[node name="敏捷" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "agility"

[node name="魔力" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "max_magic"

[node name="血量" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "max_hp"

[node name="防御" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "defense"

[node name="暴击率" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "critical_rate"

[node name="易伤几率" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "vulnerability_rate"

[node name="闪避" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "evasion"

[node name="幸运" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "luck"

[node name="速度" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "speed"

[node name="生命回复" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "health_regeneration"

[node name="治疗效率" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "healing_effciency"

[node name="物理伤害" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "damage"

[node name="暴击伤害" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "critical_damage"

[node name="易伤伤害" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "vulnerability_damage"

[node name="火焰伤害" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "fire_damage"

[node name="闪电伤害" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "light_damage"

[node name="冰霜伤害" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "frost_damage"

[node name="物理抗性" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "physical_resistance"

[node name="冰霜抗性" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "frost_resistance"

[node name="闪电抗性" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "light_resistance"

[node name="火焰抗性" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "fire_resistance"

[node name="毒素抗性" parent="Panel/VBoxContainer/MarginContainer/NinePatchRect/VBoxContainer/VBoxContainer2/MarginContainer/ScrollContainer/Propertys" instance=ExtResource("1_q04fi")]
layout_mode = 2
title = "物理伤害"
value_index = "toxic_resistance"
